--- a/src/components/searchBar/searchBar.css
+++ b/src/components/searchBar/searchBar.css
@@ -1,43 +1,58 @@
-.searchBarContainer{
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
+.searchBarContainer {
     height: 60px;
     background-color: #219890;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
-.webTitle{
+
+.webTitle {
     margin: 30px;
     font-size: 80px;
+    font-family: 'Lobster', cursive;
 }
-.inputHolder{
+
+.inputHolder {
     width: 400px;
     height: 40px;
     margin: 0 20px;
     border: 1px solid black;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     overflow: hidden;
     display: flex;
+    box-shadow: 4px 4px 0px rgba(0, 0, 0, 1);
 }
-.searchInput{
+
+.searchInput {
     width: 80%;
-    padding:10px;
+    padding: 10px;
     border: none;
 }
 
-.searchButton{
-    width:20%;
+.searchButton {
+    width: 20%;
     background-color: white;
     border: none;
 }
 
-@keyframes headerIn{
-    0%{transform:translate(0, 300px)}
-    100%{transform:translate(0,0)}
+@keyframes headerIn {
+    0% {
+        transform: translate(0, 300px)
+    }
+
+    100% {
+        transform: translate(0, 0)
+    }
 }
 
-@keyframes inputToLeft{
-    0%{transform:translate(200px,0)}
-    100%{transform:translate(0,0)}
+@keyframes inputToLeft {
+    0% {
+        transform: translate(200px, 0)
+    }
+
+    100% {
+        transform: translate(0, 0)
+    }
 }
-
-
